--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 clap = "3.0.0-beta.2"
 ignore = "0.4"
 sha2 = "0.9"
+serde = {version = "1.0", features=["derive"]}
+serde_yaml = "0.8"
+hex = "0.4.3"
