--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 [dependencies]
 clap = "3.0.0-beta.2"
 ignore = "0.4"
-sha2 = "0.9"
+digest = "0.9.0"
+blake3 = {version = "1.0.0", features=["traits-preview"]}
 serde = {version = "1.0", features=["derive"]}
 serde_yaml = "0.8"
 hex = "0.4.3"
